Import of MUDLER/Deeme-0.03 from CPAN.
gitpan-cpan-distribution: Deeme
gitpan-cpan-version:      0.03
gitpan-cpan-path:         MUDLER/Deeme-0.03.tar.gz
gitpan-cpan-author:       MUDLER
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -21,13 +21,14 @@ no_index:
     - share
     - eg
     - examples
+recommends:
+  feature: 0
 requires:
   MIME::Base64: 0
   Scalar::Util: 0
-  feature: 0
   perl: 5.008_005
 resources:
   bugtracker: https://github.com/mudler/p5-Deeme/issues
   homepage: https://github.com/mudler/p5-Deeme
   repository: https://github.com/mudler/p5-Deeme.git
-version: 0.02
+version: 0.03
